# Solace

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  conanfile.py  project.lua
samples/: beehive.solace  cga-green.solace  cloudysun.solace  coffee.solace  cow.solace  defaults.solace  grass.solace  halloween.solace  keylime.solace  legalpad.solace  manpage.solace  mg1.solace  monokaipink.solace  notepad.solace  novel.solace  ocean.solace  optimus.solace  powershell.solace  redo.solace  redw.solace  squirrel.solace  sunset.solace  sunsky.solace  sunskyd.solace  ubuntu.solace  whisper.solace
src/: Dependencies.mcpp  Solace.mcpp
